syntax = "proto3";

package wobl.msg; 

message Quaternion {
    float w = 1;
    float x = 2;
    float y = 3;
    float z = 4;
}

message Vector3 {
  float x = 1;
  float y = 2;
  float z = 3;
}

message Imu {
    double timestamp = 1;
    Quaternion orientation = 2;
    Vector3 angular_velocity = 3;
    Vector3 linear_acceleration = 4;
}

message JointState {
    double timestamp = 1;
    repeated float position = 2;
    repeated float velocity = 3;
    repeated float effort = 4;
}

message JointCommand {
    double timestamp = 1;
    repeated float position = 2;
    repeated float velocity = 3;
}

message JointEnable {
    double timestamp = 1;
    bool enable = 2;
}

message ControllerState {
    double timestamp = 1;
    Vector3 orientation = 2;
    Vector3 angular_velocity = 3;

    float tar_fwd_velocity = 4;
    float tar_yaw_rate = 5;

    float cmd_fwd_velocity = 6;
    float cmd_yaw_rate = 7;
}